# cyberchallenge

./: .gitignore  README.md  player170.conf  quick_printer  requirements.txt
.devcontainer/: devcontainer.json
Jeopardy-2023/apprentice/: apprentice.py  apprentice_output.txt
Jeopardy-2023/conundrum/: go.mod  main.go
Jeopardy-2023/hang-thight/: hang_tight  solution.md
Jeopardy-2023/image-scanner/: Dockerfile
Jeopardy-2023/store98/store98/store98/: Cargo.toml  diesel.toml
Jeopardy-2023/store98/store98/store98/migrations/2023-04-13-171542_store98/: down.sql  up.sql
Jeopardy-2023/store98/store98/store98/src/: main.rs  models.rs  schema.rs  secret.rs  utils.rs
Jeopardy-2023/store98/store98/store98/www/: index.html
Jeopardy-2023/store98/store98/store98/www/assets/: clippy.css  clippy.js  login.js  main.css  search.js  wordart.css
crypto/intro/: 01.ipynb  02.ipynb
cyberchallenge.rep/: projectState
cyberchallenge.rep/idata/: ~index.bak  ~journal.bak
cyberchallenge.rep/user/: ~index.bak  ~journal.bak
jeopardy2024/: shellcode.py
jeopardy2024/CCIA/: CCIA  key.py
jeopardy2024/Matrioska/: qVSNHXGcGpqEbYkk copy  qVSNHXGcGpqEbYkk.txt  unzip.sh
jeopardy2024/cybertron/: flag.txt
jeopardy2024/sssssssssssssssss/: SSSSSSSSSSSSSSSSSSSS.py  SSSSSSSSSSSSSSSSSSSS_copy.py  SSSSSSSSSSSSSSSSSSSS_output.txt
jeopardy2024/super-php/: docker-compose.yml
network-security/pre/: edit.txt  export_ns-8.json  (+4 more)
simulation2/: tulpsetup.sh
software-security-0/: background.md  flag.py  flag.txt
software-security-1/: print.py  software-vulnerabilities.md  the_safe
(+216 files in other folders)
