[package]
name = "store98"
version = "1.0.0"
edition = "2021"
description = "store98"
homepage = "https://cyberchallenge.it"

[dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
simplelog = "0.12.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1.12"
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
chrono = { version = "0.4.23" }
futures = "0.3.26"
tokio = { version = "1.26.0", features = [ "full" ] }
tokio-util = { version = "0.7.7", features = [ "codec" ] }
lazy_static = "1.4.0"
directories = "5.0.0"
nbytes = "0.1.0"
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
diesel = { version = "2.0.4", features = ["mysql"] }
md5 = "0.7.0"
rand = "0.8.5"
data-encoding = "2.3.3"
urldecode = "0.1.1"

[[bin]]
name = "store98"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
